--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -212,7 +212,7 @@
 					    	    margin-right: 0px;
 							    width: auto;
 							    padding: 0 20px;
-							    &.active{
+							    &:hover{
 							   		a{
 							   			color: #00bfbf;
 							   		}
