--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -7764,7 +7764,7 @@ a.text-dark:hover, a.text-dark:focus {
               margin-right: 0px;
               width: auto;
               padding: 0 20px; }
-              .site-header .site-navigation .header-menu ul.menu li .sub-menu li:hover a {
+              .site-header .site-navigation .header-menu ul.menu li .sub-menu li:hover > a {
                 color: #00bfbf; }
               .site-header .site-navigation .header-menu ul.menu li .sub-menu li a {
                 color: black;
