--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -8455,39 +8455,40 @@ strong {
 .article-count {
   margin-bottom: 0; }
 
+.single-post .latest-reads .recent-post {
+  border-top: 1px solid #bfbfbf; }
+
 .latest-reads {
   margin: 60px 0 30px; }
-  .latest-reads .recent-post {
-    border-top: 1px solid #bfbfbf; }
-    .latest-reads .recent-post-featured-img img {
-      width: 100%;
-      object-fit: cover; }
-      @media (min-width: 768px) and (max-width: 991px) {
-        .latest-reads .recent-post-featured-img img {
-          height: 120px; } }
-      @media (min-width: 1024px) {
-        .latest-reads .recent-post-featured-img img {
-          height: 150px; } }
-    .latest-reads .recent-post-header h2.title {
-      padding: 0;
-      line-height: 26px; }
-      .latest-reads .recent-post-header h2.title a {
-        font-size: 18px;
-        line-height: 26px;
-        font-weight: 600;
-        color: black; }
-        @media (max-width: 767px) {
-          .latest-reads .recent-post-header h2.title a {
-            font-size: 14px;
-            line-height: 19px; } }
-        .latest-reads .recent-post-header h2.title a:hover {
-          text-decoration: none; }
-    .latest-reads .recent-post-excerpt {
-      font-size: 15px;
-      line-height: 1.5 !important;
-      color: #212326; }
-    .latest-reads .recent-post-icons {
-      display: none; }
+  .latest-reads .recent-post-featured-img img {
+    width: 100%;
+    object-fit: cover; }
+    @media (min-width: 768px) and (max-width: 991px) {
+      .latest-reads .recent-post-featured-img img {
+        height: 120px; } }
+    @media (min-width: 1024px) {
+      .latest-reads .recent-post-featured-img img {
+        height: 150px; } }
+  .latest-reads .recent-post-header h2.title {
+    padding: 0;
+    line-height: 26px; }
+    .latest-reads .recent-post-header h2.title a {
+      font-size: 18px;
+      line-height: 26px;
+      font-weight: 600;
+      color: black; }
+      @media (max-width: 767px) {
+        .latest-reads .recent-post-header h2.title a {
+          font-size: 14px;
+          line-height: 19px; } }
+      .latest-reads .recent-post-header h2.title a:hover {
+        text-decoration: none; }
+  .latest-reads .recent-post-excerpt {
+    font-size: 15px;
+    line-height: 1.5 !important;
+    color: #212326; }
+  .latest-reads .recent-post-icons {
+    display: none; }
   @media (max-width: 767px) {
     .latest-reads {
       display: none; } }
@@ -9304,6 +9305,8 @@ strong {
 .category-filler {
   height: 300px; }
 
+.explore-articles-section .category-buttons {
+  margin-bottom: 40px; }
 @media (max-width: 767px) {
   .explore-articles-section {
     margin-top: 40px !important; } }
@@ -9517,7 +9520,7 @@ strong {
 .transformation-section-single-content .content-title .title {
   line-height: 24px; }
   .transformation-section-single-content .content-title .title a {
-    font-size: 18px;
+    font-size: 21px;
     font-weight: 600;
     color: #000; }
   @media (min-width: 768px) {
@@ -9590,7 +9593,8 @@ strong {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    padding-right: 20px; }
+    padding-right: 20px;
+    margin-bottom: 40px; }
     .slideshow .slick-dots li {
       position: relative; }
       .slideshow .slick-dots li:before {
@@ -9616,8 +9620,54 @@ strong {
     opacity: 0.50; }
   .slideshow .slick-arrow {
     position: absolute;
+    width: 50px;
+    height: 50px;
+    margin-top: -20px;
+    z-index: 1;
     top: 50%;
-    margin-top: -15px;
+    border: 0;
+    background: rgba(255, 255, 255, 0.4);
+    text-indent: -9999px;
+    border-radius: 50%; }
+    .slideshow .slick-arrow:after {
+      content: '';
+      position: absolute;
+      top: 20px;
+      left: 21px;
+      width: 10px;
+      height: 10px;
+      border: 2px solid #fff;
+      border-bottom: 0;
+      border-right: 0; }
+    .slideshow .slick-arrow:hover {
+      outline: 0;
+      opacity: 1;
+      background: rgba(255, 255, 255, 0.5); }
+    .slideshow .slick-arrow:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+      background: rgba(255, 255, 255, 0.4); }
+    .slideshow .slick-arrow.slick-disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+      background: rgba(255, 255, 255, 0.4); }
+    .slideshow .slick-arrow.slick-prev {
+      left: 20px;
+      transform: rotate(-45deg); }
+    .slideshow .slick-arrow.slick-next {
+      right: 20px;
+      transform: rotate(135deg); }
+  .slideshow .slick-arrow1 {
+    position: absolute;
+    top: 50%;
+    margin-top: -15px; }
+    .slideshow .slick-arrow1.slick-prev-btn {
+      left: 10px;
+      transform: rotate(-136deg); }
+    .slideshow .slick-arrow1.slick-next-btn {
+      right: 10px;
+      transform: rotate(45deg); }
+  .slideshow .slick-sign {
     display: inline-block;
     width: 12px;
     height: 12px;
@@ -9627,14 +9677,8 @@ strong {
     border-radius: 1px;
     color: white;
     z-index: 9; }
-    .slideshow .slick-arrow.slick-prev {
-      left: 10px;
-      transform: rotate(-136deg); }
-    .slideshow .slick-arrow.slick-next {
-      right: 10px;
-      transform: rotate(45deg); }
     @media (max-width: 767px) {
-      .slideshow .slick-arrow {
+      .slideshow .slick-sign {
         display: none !important; } }
   .slideshow button {
     font-size: 0;
@@ -10025,6 +10069,45 @@ strong {
 @media (min-width: 768px) {
   .content-mobile {
     display: none; } }
+
+.read-these-next .section-title {
+  border-bottom: 1px solid #bfbfbf; }
+.read-these-next-content .recent-post .category a {
+  color: #00bfbf;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px; }
+.read-these-next-content .slick-list {
+  padding-left: 0 !important; }
+.read-these-next-content .slick-next {
+  background-image: url(../images/slider-next.svg) !important;
+  right: -15px; }
+.read-these-next-content .slick-prev {
+  background-image: url(../images/slider-prev.svg) !important;
+  left: -15px; }
+.read-these-next-content .slick-arrow {
+  z-index: 2;
+  font-size: 0;
+  line-height: 0;
+  position: absolute;
+  top: 50%;
+  display: block;
+  width: 50px;
+  height: 60px;
+  padding: 0;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  cursor: pointer;
+  color: transparent;
+  border: none;
+  outline: 0;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-size: contain; }
+  @media (max-width: 767px) {
+    .read-these-next-content .slick-arrow {
+      display: none !important; } }
 
 .videos-banner-iframe {
   border-radius: 24px;
