--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -135,6 +135,7 @@
 		    @media (max-width: 767px){
 		    	font-size: 20px !important;
 		    	line-height: 24px;
+		    	padding-top: 5px;
 		    }
 		}
 		.entry-content {
