--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -8135,6 +8135,9 @@ a.text-dark:hover, a.text-dark:focus {
       background: white;
       z-index: 99; } }
 
+#searchform {
+  margin: 5px 0 0 10px; }
+
 * {
   margin: 0;
   padding: 0; }
