--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -909,5 +909,12 @@
 		&.pinterest{
 			background: #CE000B;
 		}
+		&.youtube{
+			background: #CC1A1D;
+		}
+		&.instagram{
+			background: #D12798;
+		}
+		
 	}
 }
