--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9749,7 +9749,14 @@ strong {
     line-height: 50px;
     color: #fff;
     font-size: 22px;
-    width: 40px; }
+    width: 40px;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: width 500ms ease;
+    -webkit-transition: all 500ms ease; }
+    #social-follow-sidebar .contact-button-link:hover {
+      width: 4pc; }
     #social-follow-sidebar .contact-button-link.facebook {
       background: #3A5AB2; }
     #social-follow-sidebar .contact-button-link.twitter {
