--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -900,6 +900,14 @@
 		color: #fff;
 		font-size: 22px;
 		width: 40px;
+		-moz-transition: all 500ms ease;
+		-ms-transition: all 500ms ease;
+		-o-transition: all 500ms ease;
+		transition: width 500ms ease;
+		-webkit-transition: all 500ms ease; 
+		&:hover{
+			width: 4pc; 
+		}
 		&.facebook{
 			background: #3A5AB2;
 		}
