--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -900,11 +900,11 @@
 		color: #fff;
 		font-size: 22px;
 		width: 40px;
-		-moz-transition: all 500ms ease;
-		-ms-transition: all 500ms ease;
-		-o-transition: all 500ms ease;
-		transition: width 500ms ease;
-		-webkit-transition: all 500ms ease; 
+		-moz-transition: width 200ms ease;
+		-ms-transition: width 200ms ease;
+		-o-transition: width 200ms ease;
+		transition: width 200ms ease;
+		-webkit-transition: width 200ms ease; 
 		&:hover{
 			width: 4pc; 
 		}
