--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -8591,6 +8591,57 @@ strong {
 .ampforwp-comment-wrapper {
   display: none; }
 
+.back-to-top {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  transition: 0.4s;
+  width: 62px;
+  height: 62px;
+  background-color: rgba(101, 161, 74, 0.75);
+  color: #ffffff;
+  font-size: 0;
+  line-height: 0;
+  position: fixed;
+  bottom: -64px;
+  right: 0%;
+  z-index: 20;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  bottom: 50px;
+  cursor: pointer; }
+  .back-to-top:before {
+    font-family: 'wokiee_icons' !important;
+    content: "\e9c9";
+    display: block;
+    font-size: 20px;
+    line-height: 1;
+    position: relative;
+    top: 0;
+    -moz-transition: top 0.2s linear;
+    -o-transition: top 0.2s linear;
+    -webkit-transition: top 0.2s linear;
+    transition: top 0.2s linear; }
+
 .seperator {
   border-top: 1px solid #333B73;
   margin: 30px -10px; }
