--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -8597,7 +8597,8 @@ strong {
   right: 25px;
   display: none;
   background-color: rgba(0, 191, 191, 0.6);
-  color: #fff; }
+  color: #fff;
+  z-index: 9; }
 
 .comment-block .comment-respond {
   margin-bottom: 40px; }
