--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -466,6 +466,7 @@
     display: none;
     background-color: rgba(0,191,191,0.6);
     color:#fff;
+    z-index: 9;
 }
 .comment-block .comment-respond{
 	margin-bottom: 40px;
