--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9229,7 +9229,9 @@ strong {
     z-index: 2;
     font-size: 26px;
     text-transform: uppercase;
-    font-weight: 900; }
+    font-weight: 900;
+    text-align: center;
+    width: 100%; }
 @media (min-width: 768px) {
   .banner-category-title {
     display: none; } }
