--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -47,6 +47,8 @@
 			    font-size: 26px;
 			    text-transform: uppercase;
 			    font-weight: 900;
+			    text-align: center;
+			    width: 100%;
 			}
 		}
 		&-title{
