--- a/wp-content/themes/healthkart/assets/scss/_footer.scss
+++ b/wp-content/themes/healthkart/assets/scss/_footer.scss
@@ -294,6 +294,7 @@
 	}
 	.frm_button_submit{
 		background: #18C7C7;
+		border-color: #18C7C7;
 		&:hover{
 			background: #009999;
 			color: #fff;
