--- a/wp-content/themes/healthkart/assets/scss/_footer.scss
+++ b/wp-content/themes/healthkart/assets/scss/_footer.scss
@@ -11,6 +11,10 @@
 	    	.footer-sidebar{
 	    		.widget{
 	    			margin-bottom: 0;
+	    			ul{
+	    				margin: 0;
+	    				padding:0;
+	    			}
 	    		}
 			    .widget-title{
 				    margin-top: 0;
