Added a class for published date in banner-section and added css

--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -10278,5 +10278,7 @@ strong {
   @media (max-width: 767px) {
     .videos-banner-iframe {
       height: 300px; } }
-
+.blog-date{
+  font-size: 14px;
+}
 /*# sourceMappingURL=theme-styles.css.map */
