--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -509,6 +509,26 @@
 		}
 	}
 }
+/*banner css*/
+.popupOverlay{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000000a6;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	z-index: 99;
+    
+	img{
+	width: 80%;
+	height: auto;
+  }
+}
+
+
 /* Place Holder CSS */
 ::-webkit-input-placeholder {
   color: #000;
