Styles added for Image popup.

--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -11019,6 +11019,12 @@ strong {
   height: auto;
 }
 
+@media (max-width: 767px) {
+  .popupOverlay img {
+    width: 95%;
+  }
+}
+
 /* Place Holder CSS */
 ::-webkit-input-placeholder {
   color: #000;
