--- a/wp-content/themes/healthkart/assets/scss/_footer.scss
+++ b/wp-content/themes/healthkart/assets/scss/_footer.scss
@@ -20,10 +20,10 @@
 				    margin-top: 0;
 				    margin-bottom: 15px;
 				    color: #141516;
-				    font-size: 18px;
+				    font-size: 15px;
 				    font-weight: 400;
 				    @media (min-width: 992px) and (max-width: 1199px){
-					    height: 42px;
+					    /*height: 42px;*/
 				    }
 			    }
 			    p{
