--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -318,6 +318,7 @@
 		    font-size: 15px;
 		    line-height: 1.5 !important;
 		    color: #212326;
+			text-align: justify;
 		}
 		&-icons{
 			display: none;
