--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -1,51 +1,62 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 }
-body{
-	font-family: 'Roboto', sans-serif;
+body {
+	font-family: "Roboto", sans-serif;
 	position: relative;
-	&.no-scrolling{
+	&.no-scrolling {
 		overflow: hidden;
 	}
 }
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
-	font-family: 'Roboto', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+	font-family: "Roboto", sans-serif;
 }
 .container {
-	@media (min-width: 1200px){
-	    max-width: 1190px;
+	@media (min-width: 1200px) {
+		max-width: 1190px;
 	}
-	@media (max-width: 992px){
+	@media (max-width: 992px) {
 		max-width: 100%;
 	}
 }
-.f-12{
+.f-12 {
 	font-size: 12px;
 }
-.f-14{
+.f-14 {
 	font-size: 14px;
 }
-.f-18{
+.f-18 {
 	font-size: 18px;
-	@media (max-width: 767px){
+	@media (max-width: 767px) {
 		font-size: 14px;
 	}
 }
-.f-24{
+.f-24 {
 	font-size: 24px;
-	@media (max-width: 767px){
+	@media (max-width: 767px) {
 		font-size: 16px;
 	}
 }
-.font-weight-500{
+.font-weight-500 {
 	font-weight: 500 !important;
 }
-strong{
+strong {
 	color: #212121;
 }
 .action-block {
-	a{
+	a {
 		padding: 6px 10px;
 		font-size: 12px;
 		color: #00bfbf;
@@ -55,35 +66,39 @@ strong{
 		justify-content: center;
 		border: 1px solid #00bfbf;
 		border-radius: 5px;
-    	padding: 12px 15px;
-    	text-decoration: none;
-	    text-transform: uppercase;
-	    font-weight: 600;
-    	&:hover{
-    		text-decoration: none;
-    	}
+		padding: 12px 15px;
+		text-decoration: none;
+		text-transform: uppercase;
+		font-weight: 600;
+		&:hover {
+			text-decoration: none;
+		}
 	}
 }
-.content-sidebar-wrap{
-    padding: 60px 0;
+.content-sidebar-wrap {
+	padding: 60px 0;
 }
-a{
-	&:hover{
+a {
+	&:hover {
 		text-decoration: none;
 	}
-	&:focus{
+	&:focus {
 		outline: 0;
 	}
 }
-.fb_iframe_widget_fluid_desktop, .fb_iframe_widget_fluid_desktop span, .fb_iframe_widget_fluid_desktop iframe, .fb-comments.fb_iframe_widget, #u_0_0 {
+.fb_iframe_widget_fluid_desktop,
+.fb_iframe_widget_fluid_desktop span,
+.fb_iframe_widget_fluid_desktop iframe,
+.fb-comments.fb_iframe_widget,
+#u_0_0 {
 	width: 100% !important;
 }
-@media(max-width: 767px){
-	.fb_iframe_widget_fluid_desktop iframe{
+@media (max-width: 767px) {
+	.fb_iframe_widget_fluid_desktop iframe {
 		margin-top: 15px;
 	}
 }
-strong{
+strong {
 	color: #212326 !important;
 }
 .overlay {
@@ -98,17 +113,191 @@ strong{
 	z-index: 1;
 	border-radius: 24px;
 }
-.btn.hk-btn{
-	background: #18C7C7;
+.btn.hk-btn {
+	background: #18c7c7;
 	color: white !important;
 	height: 48px;
 	border-radius: 4px;
-    padding: 14px 40px;
-    text-transform: uppercase;
-    font-size: 15px;
-    line-height: 20px;
-    letter-spacing: 0.6px;
-    border: 0;
-    font-weight: bold;
-    margin: 0;
+	padding: 14px 40px;
+	text-transform: uppercase;
+	font-size: 15px;
+	line-height: 20px;
+	letter-spacing: 0.6px;
+	border: 0;
+	font-weight: bold;
+	margin: 0;
+}
+
+.tag {
+	.content-sidebar-wrap {
+		max-width: 1190px;
+		margin: 0 auto;
+		padding-left: 15px;
+		padding-right: 15px;
+		.archive-description{
+			margin-bottom: 20px;
+			.archive-title{
+				font-size: 38px;
+					line-height: 50px;
+					padding-right: 30px;
+					font-weight: bold;
+					padding-bottom: 0;
+					margin-bottom: 0;
+					text-transform: capitalize;
+					color: #000;
+					margin-top: 5px;
+					@media (max-width: 767px) {
+						font-size: 26px;
+						line-height: 34px;
+					}
+			}
+		}		
+		.content {
+			@media (min-width: 992px) {
+				padding-right: 50px;
+			}
+		}
+		.entry-header {
+			.entry-title {
+				font-size: 20px;
+				padding-right: 0;
+				font-weight: 600;
+				padding-bottom: 0;
+				margin-bottom: 0;
+				text-transform: capitalize;
+				color: #000;
+				a {
+					color: #000;
+				}
+				@media (max-width: 767px) {
+					font-size: 20px;
+				}
+			}
+			p {
+				font-family: "Roboto", sans-serif !important;
+				font-size: 17px;
+				line-height: 2 !important;
+				color: #333 !important;
+				margin-bottom: 10px !important;
+				text-align: justify;
+				@media (max-width: 767px) {
+					font-size: 15px;
+				}
+			}
+			a {
+				color: #00bfbf;
+			}
+		}
+		.entry-content {
+			font-family: "Roboto", sans-serif !important;
+			p {
+				font-family: "Roboto", sans-serif !important;
+				font-size: 17px;
+				line-height: 2 !important;
+				color: #333 !important;
+				margin: 10px 0 !important;
+				text-align: justify;
+				@media (max-width: 767px) {
+					font-size: 15px;
+				}
+			}
+			ul,
+			ol {
+				li {
+					font-family: "Roboto", sans-serif !important;
+					font-size: 17px;
+					line-height: 2 !important;
+					color: #333 !important;
+				}
+			}
+			a {
+				color: #00bfbf;
+			}
+			.hk-content-image {
+				margin-bottom: 15px;
+			}
+		}
+		.entry-footer {
+			p {
+				font-family: "Roboto", sans-serif !important;
+				font-size: 17px;
+				line-height: 2 !important;
+				color: #333 !important;
+				margin: 10px 0 !important;
+				text-align: justify;
+				@media (max-width: 767px) {
+					font-size: 15px;
+				}
+			}
+			a {
+				color: #00bfbf;
+			}
+		}
+	}
+	.related-articles {
+		.recent-post {
+			&-featured-img {
+				img {
+					@media (min-width: 1024px) {
+						height: 200px;
+						width: 100%;
+						object-fit: cover;
+					}
+				}
+			}
+		}
+		.category {
+			a {
+				color: #00bfbf;
+				font-weight: 500;
+				font-size: 14px !important;
+				line-height: 18px;
+			}
+		}
+		.dot {
+			padding: 0 8px;
+			i {
+				font-size: 5px;
+				vertical-align: middle;
+			}
+		}
+		.last-read {
+			color: rgba(0, 0, 0, 0.49);
+			font-size: 14px !important;
+			line-height: 26px;
+		}
+	}
+	.read-these-next {
+		.recent-post {
+			.category {
+				a {
+					color: #00bfbf;
+					font-weight: 500;
+					font-size: 14px !important;
+					line-height: 18px;
+				}
+			}
+			.dot {
+				padding: 0 8px;
+				i {
+					font-size: 5px;
+					vertical-align: middle;
+				}
+			}
+			.last-read {
+				color: rgba(0, 0, 0, 0.49);
+				font-size: 14px !important;
+				line-height: 26px;
+			}
+			.recent-post-header {
+				.title {
+					@media (max-width: 767px) {
+						font-size: 20px !important;
+						line-height: 24px;
+						padding-top: 5px;
+					}
+				}
+			}
+		}
+	}
 }
