--- a/wp-content/themes/healthkart/style.css
+++ b/wp-content/themes/healthkart/style.css
@@ -1971,15 +1971,17 @@ p.entry-meta {
 	}
 }
 
-.explore-articles-single:nth-child(odd){}
-
-.trending-articles-section .trending-articles-single.trending-articles-single-main{
+.explore-video-section .explore-articles-single:nth-child(odd){
 	display: none;
 }
-.trending-articles-section .trending-articles-single.trending-articles-single-main:nth-child(-n + 2) {
+
+.trending-articles-section-article .trending-articles-single.trending-articles-single-main{
+	display: none;
+}
+.trending-articles-section-article .trending-articles-single.trending-articles-single-main:nth-child(-n + 2) {
 	display: block;
 }
-.banner-video:nth-child(odd),
+.banner-video:nth-child(odd),.trending-videos-section .trending-articles-single:nth-child(odd),
 .videos-single:nth-child(odd) {
 	display: none;
 }
@@ -1988,7 +1990,7 @@ p.entry-meta {
 }
 .more-articles-section{}
 
-.more-articles-single:nth-child(odd){}
+.more-videos-section .more-articles-single:nth-child(odd){display: none;}
 .latest-reads .recent-post:nth-child(-n + 6) {
 	display: block;
 }
