--- a/wp-content/themes/healthkart/style.css
+++ b/wp-content/themes/healthkart/style.css
@@ -1970,7 +1970,7 @@ p.entry-meta {
 		page-break-before: avoid;
 	}
 }
-
+/* 
 .explore-video-section .explore-articles-single:nth-child(odd){
 	display: none;
 }
@@ -1997,4 +1997,4 @@ p.entry-meta {
 	.infographics-articles-single:after {
 	display: none;
 	}
-}
+} */
