width and height values changed to 0

--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -576,8 +576,8 @@
 				left: 14px;
 				right: 0;
 				background: #ececec;
-				width: 95%;
-				height: 1px;
+				width: 0px;
+				height: 0px;
 			}
 		}
 		@media (max-width: 767px) {
