fix for explore articles

--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -373,6 +373,11 @@
 		}
 		&-content {
 			.content-title {
+				.cat-detail{
+					@media(min-width: 768px) and (max-width: 1199px){
+						min-height: 56px;
+					}
+				}
 				.title {
 					line-height: 22px !important;
 					a {
