--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -619,7 +619,7 @@
 			    							&:after{
 												content: "";
 												position:absolute;
-												background: #424242;
+												background: #fff;
 												top: 21px;
 												right: 16px;
 												width: 12px;
