--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -982,17 +982,17 @@ h2.title a {
 	    padding: 0;
 	    margin-top: -20px;
 	    z-index: 1;
-	    top: 50%;
+	    top: 35%;
 	    border: 0;
 	    background: rgba(0,0,0,.4);
 	    text-indent: -9999px;
 	    border-radius: 50%;
 	    &.next-arrow {
-		    right: 20px;
-		    transform: rotate(135deg);
+		    left: 0px;
+		    transform: rotate(-45deg);
 		}
 	    &.prev-arrow {
-		    left: 20px;
+		    right: 0px;
 		    transform: rotate(135deg);
 		}
 	    &::after {
@@ -1002,9 +1002,48 @@ h2.title a {
 		    left: 12px;
 		    width: 8px;
 		    height: 8px;
-		    border: 2px solid #000;
+		    border: 2px solid #fff;
 		    border-bottom: 0;
 		    border-right: 0;
 		}
+	}
+	.slick-dots{
+	    position: relative;
+	    display: flex;
+	    justify-content: center;
+	    width: 100%;
+	    padding-right: 20px;
+	    margin: 15px 0;
+		li{
+			position: relative;
+			button{
+				font-size: 0;
+				line-height: 0;
+				display: block;
+				width: 20px;
+				height: 20px;
+				padding: 5px;
+				cursor: pointer;
+				color: transparent;
+				border: 0;
+				outline: none;
+				background: 0 0;
+			}
+			&:before {
+		    	font-family: "slick";
+			    font-size: 30px;
+			    line-height: 20px;
+			    position: absolute;
+			    top: 0;
+			    left: 0;
+			    width: 20px;
+			    height: 20px;
+			    content: "•";
+			    text-align: center;
+			    color: #00bfbf;
+			    -webkit-font-smoothing: antialiased;
+			    -moz-osx-font-smoothing: grayscale;
+			}
+	 	}
 	}
 }
