--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -984,7 +984,7 @@ h2.title a {
 	    z-index: 1;
 	    top: 35%;
 	    border: 0;
-	    background: rgba(0,0,0,.4);
+	    background: rgba(0,191,191,0.82);
 	    text-indent: -9999px;
 	    border-radius: 50%;
 	    &.next-arrow {
