--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -313,9 +313,9 @@
 				top: -16px;
 				left: 14px;
 				right: 0;
-				background: #ececec;
-				width: 95%;
-				height: 1px;
+				background: #white;
+				width: 0px;
+				height: 0px;
 			}
 		}
 		@media (max-width: 767px) {
