--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -313,7 +313,7 @@
 				top: -16px;
 				left: 14px;
 				right: 0;
-				background: #white;
+				background: #fff;
 				width: 0px;
 				height: 0px;
 			}
