--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -374,7 +374,7 @@
 		&-content {
 			.content-title {
 				.cat-detail{
-					@media(min-width: 768px) and (max-width: 1199px){
+					@media(min-width: 768px) {
 						min-height: 56px;
 					}
 				}
