--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -299,6 +299,7 @@
 			h2.title{
 				padding: 0;
 				line-height: 26px;
+			    min-height: 64px;
 				a{
 					font-size: 16px;
 					line-height: 26px;
